# SiTerm

./: Cargo.toml  README.md
fw/rp2040/: Cargo.toml
fw/rp2040/src/: main.rs  state.rs  status_led.rs  usb_transport.rs
fw/rp2040/src/handlers/: echo.rs  i2c.rs  mod.rs  uart.rs
protocol/: Cargo.toml
protocol-host/: Cargo.toml
protocol-host/src/: i2c.rs  lib.rs
protocol/src/: lib.rs
protocol/src/host/: i2c.rs  mod.rs
tui/: .envrc  Cargo.toml  LICENSE  README.md
tui/.config/: config.json5
tui/.github/workflows/: cd.yml
tui/src/: action.rs  app.rs  components.rs  config.rs  logging.rs
tui/src/components/: connecting.rs  error_view.rs  preconnect.rs  terminal.rs
